tests/NormalTests/paczka1/fuzzy1/48977046.err
Error in line 2: tY8HUTlI A941 90,7
Error in line 11: 4h3 A804 62,1
Error in line 13: 4h3 A941 48,8
Error in line 22: tY8HUTlI A804 77,5
Error in line 24: 2gNXLIxT2 S152 22,9
Error in line 6: gXRuMUNWv A941 13,8
Error in line 23: tY8HUTlI S152 44,0
Error in line 28: gXRuMUNWv S152 75,1
Error in line 31: tY8HUTlI A804 72,7
